# meejson

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gcc.dds
_build/: .dds.db  compile_commands.json  json
include/meejson/: array.hpp  box.hpp  detail.hpp  except.hpp  lexer.hpp  object.hpp  parser.hpp  type_list.hpp  value.hpp
src/: except.cpp  json.main.cpp  lexer.cpp  parser.cpp
src/json/: array.cpp  array.hpp  box.hpp  detail.hpp  except.cpp  except.hpp  json.hpp  lexer.cpp  lexer.hpp  object.cpp  object.hpp  parser.hpp  value.cpp  value.hpp
test/: parser.cpp  value.cpp
